feat: add map packages and curved road networks
